Convert all operators to new signature based function registry
Refactored all operator registration to use the new signature based function registry.

Regex operators are now only registered to `text` and `undefined`(null) data types
to prevent casting of a `text` argument to an argument type of higher precedence
which would then later fail anyway on evaluation as only `text` types can be used.
This results in a different exception when used with non-text, non-null values;
`UnsupportedOperationException` instead of a `ConversionException`.